--- a/index.html
+++ b/index.html
@@ -7,15 +7,76 @@
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script src="https://unpkg.com/lucide-react@0.263.1/dist/umd/lucide-react.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <style>
+        /* Custom icons using CSS */
+        .icon {
+            display: inline-block;
+            width: 20px;
+            height: 20px;
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
+        }
+        .icon-edit { 
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M11 5H6a2 2 0 00-2 2v11a2 2 0 002 2h11a2 2 0 002-2v-5m-1.414-9.414a2 2 0 112.828 2.828L11.828 15H9v-2.828l8.586-8.586z'/%3E%3C/svg%3E");
+        }
+        .icon-download { 
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 10v6m0 0l-3-3m3 3l3-3M3 17V7a2 2 0 012-2h6l2 2h6a2 2 0 012 2v10a2 2 0 01-2 2H5a2 2 0 01-2-2z'/%3E%3C/svg%3E");
+        }
+        .icon-file { 
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z'/%3E%3C/svg%3E");
+        }
+        .icon-eye { 
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M15 12a3 3 0 11-6 0 3 3 0 016 0z'/%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z'/%3E%3C/svg%3E");
+        }
+        .icon-plus { 
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M12 6v6m0 0v6m0-6h6m-6 0H6'/%3E%3C/svg%3E");
+        }
+        .icon-minus { 
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='none' viewBox='0 0 24 24' stroke='currentColor'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M20 12H4'/%3E%3C/svg%3E");
+        }
+        .icon-sm {
+            width: 16px;
+            height: 16px;
+        }
+        .icon-xs {
+            width: 12px;
+            height: 12px;
+        }
+    </style>
 </head>
 <body>
     <div id="root"></div>
     
     <script type="text/babel">
         const { useState, useRef } = React;
-        const { Plus, Minus, Download, Eye, Edit3, FileText } = lucideReact;
+        
+        // Simple icon components using CSS
+        const Edit3 = ({ size = 20 }) => React.createElement("span", { 
+          className: "icon icon-edit", 
+          style: { width: size + 'px', height: size + 'px' }
+        });
+        const Download = ({ size = 20 }) => React.createElement("span", { 
+          className: "icon icon-download", 
+          style: { width: size + 'px', height: size + 'px' }
+        });
+        const FileText = ({ size = 20 }) => React.createElement("span", { 
+          className: "icon icon-file", 
+          style: { width: size + 'px', height: size + 'px' }
+        });
+        const Eye = ({ size = 20 }) => React.createElement("span", { 
+          className: "icon icon-eye", 
+          style: { width: size + 'px', height: size + 'px' }
+        });
+        const Plus = ({ size = 16 }) => React.createElement("span", { 
+          className: "icon icon-plus", 
+          style: { width: size + 'px', height: size + 'px' }
+        });
+        const Minus = ({ size = 16 }) => React.createElement("span", { 
+          className: "icon icon-minus", 
+          style: { width: size + 'px', height: size + 'px' }
+        });
 
         const ResumeEditor = () => {
           const [isEditing, setIsEditing] = useState(false);
